welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:7: error: type mismatch;
 found   : Unit
 required: Boolean
for(x<-1 to 6){recule();
     ^